--- a/source/sass/blocks/feature.scss
+++ b/source/sass/blocks/feature.scss
@@ -5,12 +5,19 @@
 .features__title {
   margin: 0;
   padding: 0;
-  padding-bottom: 40px;
+  padding-bottom: 41px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 36px;
   line-height: 40px;
   font-weight: 400;
   color: $black-color;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 74px;
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: -0.03em;
+  }
 }
 
 .features__list {
@@ -21,18 +28,24 @@
   @media (min-width: $medium-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 153px 32px;
+    gap: 107px 56px;
+    padding-bottom: 50px;
   }
 
   @media (min-width: $large-width) {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 94px 0;
+    gap: 94px 78px;
+    padding-bottom: 29px;
   }
 }
 
 .features__item {
   position: relative;
-  padding-bottom: 32px;
+  padding-bottom: 7px;
+
+  &:last-child {
+    padding-bottom: 34px;
+  }
 
   @media (min-width: $medium-width) {
     &::after {
@@ -44,9 +57,13 @@
       color: #f2f2f2;
       text-align: center;
       margin: 5px 10px;
-      top: -64px;
-      left: 140px;
+      top: -46px;
+      left: 101px;
       z-index: -1;
+    }
+
+    &:first-child::after {
+      left: 109px;
     }
   }
 }
@@ -55,7 +72,7 @@
   position: relative;
   margin: 0;
   padding: 0;
-  padding-bottom: 20px;
+  padding-bottom: 19px;
   padding-left: 80px;
   font-family: "Arial", sans-serif;
   font-size: 14px;
@@ -64,8 +81,10 @@
   color: #444444;
 
   @media (min-width: $medium-width) {
-    width: 211px;
-    padding-top: 111px;
+    width: 245px;
+    font-size: 16px;
+    line-height: 24px;
+    padding-top: 109px;
     padding-left: 0;
   }
 }
@@ -74,8 +93,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 10px;
+    top: -2px;
+    left: 1px;
     width: 60px;
     height: 60px;
     background: $green-btn no-repeat 50% 50% url("../img/features/leaf.svg");
@@ -91,8 +110,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 10px;
+    top: -2px;
+    left: 1px;
     width: 60px;
     height: 60px;
     background: $green-btn no-repeat 50% 50% url("../img/features/boil.svg");
@@ -108,8 +127,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 10px;
+    top: -2px;
+    left: 1px;
     width: 60px;
     height: 60px;
     background: $green-btn no-repeat 50% 50% url("../img/features/cutlery.svg");
@@ -125,8 +144,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: 10px;
+    top: -2px;
+    left: 1px;
     width: 60px;
     height: 60px;
     background: $green-btn no-repeat 50% 50% url("../img/features/alarm.svg");
