--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
+  overflow: hidden;
 
   @media (min-width: $medium-width) {
     width: $medium-width;
@@ -28,4 +29,22 @@
 
 .container--example {
   background-color: #eaeaea;
+  position: relative;
+
+  @media (min-width: $medium-width) {
+    &::before {
+      position: absolute;
+      content: "";
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 619px;
+      background-color: $white-color;
+      z-index: -3;
+
+      @media (min-width: $large-width) {
+        height: 179px;
+      }
+    }
+  }
 }
