--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,12 +1,22 @@
 .copyright {
-  padding: 22px 0;
+  padding: 15px 0;
   display: flex;
   justify-content: space-between;
+
+  @media (min-width: $medium-width) {
+    width: 165px;
+    padding: 58px 0 0;
+  }
+
+  @media (min-width: $large-width) {
+    padding: 59px 0 20px;
+  }
 }
 
 .copyright__text {
   margin: 0;
   padding: 0;
+  padding-top: 7px;
   font-family: "Arial", sans-serif;
   font-size: 16px;
   line-height: 18px;
