--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,25 @@
 .example {
   padding-bottom: 40px;
+  position: relative;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 95px;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: -1px;
+      left: -31px;
+      width: 100vw;
+      height: 1px;
+      background-color: #e6e6e6;
+      z-index: -1;
+    }
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 52px;
+  }
 }
 
 .example__content-wrapper {
@@ -10,12 +30,29 @@
 }
 
 .example__stats-wrapper {
-  // sometext
+  @media (min-width: $large-width) {
+    width: 461px;
+  }
 }
 
 .example__slider-wrapper {
-  // sometext
+  position: relative;
+  width: 280px;
+  height: 256px;
+
+  @media (min-width: $medium-width) {
+    width: 560px;
+    height: 512px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $large-width) {
+    position: absolute;
+    top: 50px;
+    right: 1px;
+  }
 }
+
 
 .example__title {
   margin: 0;
@@ -29,15 +66,22 @@
   color: $black-color;
 
   @media (min-width: $medium-width) {
+    padding-top: 43px;
+    padding-bottom: 63px;
     font-size: 60px;
     line-height: 60px;
+    letter-spacing: -0.03em;
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 146px;
   }
 }
 
 .example__text {
   margin: 0;
   padding: 0;
-  padding-bottom: 20px;
+  padding-bottom: 35px;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
@@ -45,8 +89,14 @@
   color: $grey-text;
 
   @media (min-width: $medium-width) {
+    padding-bottom: 63px;
+    padding-right: 30px;
     font-size: 16px;
     line-height: 24px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 78px;
   }
 }
 
@@ -54,6 +104,10 @@
   @media (min-width: $medium-width) {
     display: flex;
     justify-content: space-between;
+  }
+
+  @media (min-width: $large-width) {
+    display: block;
   }
 }
 
@@ -65,6 +119,7 @@
 .example__text-cost {
   margin: 0;
   padding: 0;
+  padding-bottom: 20px;
   font-family: "Oswald", "Arial", sans-serif;
   font-size: 14px;
   line-height: 20px;
@@ -72,62 +127,126 @@
   color: $black-color;
   text-transform: uppercase;
   text-align: center;
+
+  @media (min-width: $medium-width) {
+    width: 181px;
+    text-align: end;
+    font-size: 20px;
+    line-height: 25px;
+  }
+
+  @media (min-width: $large-width) {
+    width: auto;
+    text-align: start;
+  }
 }
 
 .example__slider {
   // sometext
 }
 
-.example__cats-image {
-  // sometext
-}
 
-.example__cat-fat {
-  margin: 0;
-  padding: 0;
-  display: block;
-  padding-bottom: 15px;
+.example__cats-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 256px;
+  background-size: contain;
+  background-repeat: no-repeat;
 
   @media (min-width: $medium-width) {
-    margin: 0 auto;
+    width: 560px;
+    height: 512px;
   }
-}
-
-.example__cats-image--fat {
-  // sometext
 }
 
 .example__cats-image--slim {
-  // sometext
+  z-index: 10;
+  left: 19px;
+  background-image: url("../img/example/after-cat.png");
+}
+
+.example__cats-image--fat {
+  z-index: 20;
+  width: 50%;
+  background-image: url("../img/example/before-cat.png");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .example__range {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 30;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%, -50%);
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 13px;
+    z-index: -1;
+    top: -114px;
+    width: 4px;
+    height: 145px;
+    background: #666666;
+    border-radius: 2px;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 13px;
+    z-index: -1;
+    width: 4px;
+    top: -3px;
+    height: 145px;
+    background: #666666;
+    border-radius: 2px;
+  }
+
   @media (min-width: $medium-width) {
     display: flex;
     justify-content: center;
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 13px;
+      z-index: -1;
+      top: -247px;
+      width: 4px;
+      height: 240px;
+      background: #666666;
+      border-radius: 2px;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 13px;
+      z-index: -1;
+      width: 4px;
+      top: 25px;
+      height: 240px;
+      background: #666666;
+      border-radius: 2px;
+    }
   }
 }
 
-.example__range-scale {
-  // sometext
-}
+.example__range-separator {
+  position: absolute;
+  top: -5px;
+  left: -4px;
+  width: 40px;
+  height: 40px;
+  background: no-repeat url("../img/example/separator.svg");
 
-.example__range-bar {
-  // sometext
-}
-
-.example__range-text {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 8px;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 400;
-  color: $black-color;
-  text-transform: uppercase;
-}
-
-.example__range-toggle {
-  // sometext
+  @media (min-width: $medium-width) {
+    top: -11px;
+  }
 }
