--- a/source/sass/blocks/form-comment.scss
+++ b/source/sass/blocks/form-comment.scss
@@ -1,8 +1,17 @@
 .form-comment {
-  padding-bottom: 22px;
+  padding-bottom: 16px;
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 54px;
+  }
+
+  @media (min-width: $large-width) {
+    padding-bottom: 66px;
+  }
 }
 
 .form-comment__title {
+  position: relative;
   margin: 0;
   padding: 0;
   padding-bottom: 35px;
@@ -11,11 +20,102 @@
   line-height: 26px;
   font-weight: 400;
   color: $black-color;
-  text-transform: uppercase;
+  letter-spacing: -0.04em;
   box-sizing: border-box;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 14px;
+    right: -183px;
+    width: 156px;
+    height: 2px;
+    background-color: $green-btn;
+  }
+
+  @media (min-width: $medium-width) {
+    padding-bottom: 76px;
+    font-size: 36px;
+    line-height: 1;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 22px;
+      right: -524px;
+      width: 480px;
+      height: 3px;
+      background-color: $green-btn;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 22px;
+      left: -68px;
+      width: 31px;
+      height: 3px;
+      background-color: $green-btn;
+    }
+  }
+
+  @media (min-width: $large-width) {
+    &::before {
+      content: "";
+      position: absolute;
+      top: 22px;
+      right: -1155px;
+      width: 1108px;
+      height: 3px;
+      background-color: $green-btn;
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 22px;
+      left: -110px;
+      width: 70px;
+      height: 3px;
+      background-color: $green-btn;
+    }
+  }
 }
 
 .form-comment__text {
   width: 100%;
   height: 150px;
+  margin: 0;
+  padding: 0;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  white-space: nowrap;
+  box-sizing: border-box;
+
+  &::placeholder {
+    padding: 0;
+    font-family: "Oswald", "Arial", sans-serif;
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: $grey-text;
+  }
+
+  @media (min-width: $medium-width) {
+    height: 170px;
+    padding-left: 18px;
+    padding-top: 8px;
+    font-size: 20px;
+    line-height: 30px;
+
+    &::placeholder {
+      padding-left: 18px;
+      padding-top: 8px;
+      font-size: 20px;
+      line-height: 30px;
+    }
+  }
 }
